# dry-age

./: README.md  main.py  pyproject.toml
app/api/: reading.py  writing.py
app/ui/: dashboard.py
data/: droogkast.db
main/: CMakeLists.txt  app_gpio.cpp  app_gpio.h  atomizer.cpp  atomizer.h  control.cpp  control.h  fan.cpp  fan.h  gpio_output.cpp  main.cpp  relais.cpp  relais.h  sht40.cpp  sht40.h
